# socketer

./: .dockerignore  .gitignore  CMakeLists.txt  Dockerfile  README.md
include/: socketer.h
include/socketer/: handler.h  request.h  response.h  route.h  socketer.h
src/: handler.cpp  request.cpp  response.cpp  route.cpp  socketer.cpp
tests/: CMakeLists.txt  main.cpp
